--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "builds": [
       { "src": "server.js", "use": "@vercel/node" },
-      { "src": "public/index.html", "use": "@vercel/static" }
+      { "src": "index.html", "use": "@vercel/static" }
     ],
     "routes": [
       { "src": "/", "dest": "/server.js" }
