--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,23 @@
 {
     "version": 2,
     "builds": [
-      { "src": "server.js", "use": "@vercel/node" },
-      { "src": "index.html", "use": "@vercel/static" }
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      { "src": "/", "dest": "/server.js" }
+        {
+            "src": "/(.*)",
+            "dest": "/",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "PATCH",
+                "DELETE",
+                "OPTIONS"
+            ]
+        }
     ]
-  }
-  
+}
