--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.html",
-            "use": "@vercel/static"
-        }
-    ]
+  "version": 2,
+  "static": {
+    "include": ["**/*"]
+  },
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ]
 }
