--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "*",
+      "src": "index.html",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "/public/(.*)",
       "use": "@vercel/static"
     }
   ],
