--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.html",
-      "use": "@vercel/static"
-    },
-    {
-      "src": "/public/(.*)",
+      "src": "**/*",
       "use": "@vercel/static"
     }
   ],
